[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Images/runeStone.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Stone1.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/RuneFont.tres" type="DynamicFont" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 125.087

[sub_resource type="Animation" id=2]
resource_name = "turn"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "" ]
}

[node name="Stone1" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/turn = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -50.0
margin_top = -87.0
margin_right = 50.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0588235, 0.168627, 0.678431, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_Stone1_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Stone1_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
